--- a/feed/package.json
+++ b/feed/package.json
@@ -15,7 +15,7 @@
     "setupFilesAfterEnv": [
       "./src/test/setup.ts"
     ],
-    "testTimeout": 100000
+    "testTimeout": 150000
   },
   "keywords": [],
   "author": "",
@@ -36,6 +36,8 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.7.1",
+    "@grpc/proto-loader": "^0.7.3",
     "@rhime/common": "^1.0.12",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
@@ -46,7 +48,9 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
+    "ioredis": "^5.2.3",
     "jsonwebtoken": "^8.5.1",
+    "log-to-file": "^3.0.3",
     "mongodb": "^4.9.1",
     "pino-http": "^8.2.0",
     "pino-pretty": "^9.1.0"
