--- a/auth/package.json
+++ b/auth/package.json
@@ -7,7 +7,9 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "jest --watchAll --runInBand --forceExit",
     "singletest": "jest --runInBand --forceExit",
-    "updateCommon": "npm uninstall @rhime/common && npm install @rhime/common"
+    "updateCommon": "npm uninstall @rhime/common && npm install @rhime/common",
+    "updateDiscovery": "npm uninstall @rhime/discovery && npm install @rhime/discovery",
+    "updateEvents": "npm uninstall @rhime/events && npm install @rhime/events"
   },
   "jest": {
     "preset": "ts-jest",
@@ -31,6 +33,8 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "@rhime/discovery": "^1.0.5",
+    "@rhime/events": "^1.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
