--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "lint": "next lint"
+    "lint": "next lint",
+    "updateDiscovery": "npm uninstall @rhime/discovery && npm install @rhime/discovery"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "@heroicons/react": "^2.0.11",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
+    "@rhime/discovery": "^1.0.5",
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
     "framer-motion": "^7.3.6",
