--- a/post/package.json
+++ b/post/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "jest --watchAll --runInBand --forceExit",
     "singletest": "jest --runInBand --forceExit",
-    "updateCommon": "npm uninstall @rhime/common && npm install @rhime/common"
+    "updateCommon": "npm uninstall @rhime/common && npm install @rhime/common",
+    "updateDiscovery": "npm uninstall @rhime/discovery && npm install @rhime/discovery"
   },
   "jest": {
     "preset": "ts-jest",
@@ -36,7 +37,8 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
-    "@rhime/common": "^1.0.12",
+    "@rhime/common": "^1.0.15",
+    "@rhime/discovery": "^1.0.5",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.9",
