--- a/user/package.json
+++ b/user/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "jest --watchAll --runInBand --forceExit",
     "singletest": "jest --runInBand --forceExit",
-    "updateCommon": "npm uninstall @rhime/common && npm install @rhime/common"
+    "updateCommon": "npm uninstall @rhime/common && npm install @rhime/common",
+    "updateDiscovery": "npm uninstall @rhime/discovery && npm install @rhime/discovery"
   },
   "jest": {
     "preset": "ts-jest",
@@ -38,7 +39,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.171.0",
     "@aws-sdk/s3-request-presigner": "^3.173.0",
-    "@rhime/common": "^1.0.13",
+    "@rhime/common": "^1.0.15",
+    "@rhime/discovery": "^1.0.5",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.9",
