--- a/userGraphView/package.json
+++ b/userGraphView/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "updateCommon": "npm uninstall @rhime/common && npm install @rhime/common"
+    "updateCommon": "npm uninstall @rhime/common && npm install @rhime/common",
+    "updateDiscovery": "npm uninstall @rhime/discovery && npm install @rhime/discovery"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.7.1",
     "@grpc/proto-loader": "^0.7.3",
+    "@rhime/discovery": "^1.0.5",
     "@types/node": "^18.7.16",
     "mongodb": "^4.9.1"
   }
